// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExternalLink /> should render 1`] = `
.emotion-0 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgb(90 94 0 / var(--tw-text-opacity));
  text-decoration-line: none;
}

.emotion-0:hover {
  text-decoration-line: underline;
}

.emotion-0:active {
  text-decoration-line: underline;
}

<a
  class="emotion-0"
  href="https://github.com/lapanti"
  rel="jotain hassua noopener noreferrer"
  target="_blank"
  title="title"
>
  children
</a>
`;

exports[`<ExternalLink /> should render minimal 1`] = `
.emotion-0 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgb(90 94 0 / var(--tw-text-opacity));
  text-decoration-line: none;
}

.emotion-0:hover {
  text-decoration-line: underline;
}

.emotion-0:active {
  text-decoration-line: underline;
}

<a
  class="emotion-0"
  href="https://github.com/lapanti"
  rel=" noopener noreferrer"
  target="_blank"
>
  children
</a>
`;
